tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_duplicate_field_in_match_struct_pattern/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: duplicate field x
  ┌─ src/main.nr:5:25
  │
5 │             Foo { x: _, x: _, y: _ } => {}
  │                         -
  │

Aborting due to 1 previous error
